# PizzaGenerator

./: README.md  pyproject.toml  requirements.txt
pizzaservice/cheese/: main.py
pizzaservice/config/: main.py
pizzaservice/meats/: config.properties  main.py
pizzaservice/pizza/: app.py  config.properties  pizza.py  pizza_service.py
pizzaservice/sauce/: config.properties  main.py
pizzaservice/veggies/: config.properties  main.py
src/cheese-service/: config.properties  main.py
src/meats-service/: main.py
src/pizza-service/: pizza.py  pizza_service.py
src/sauce-service/: main.py
src/veggies-service/: main.py
